--- a/judo_profiles/requirements.txt
+++ b/judo_profiles/requirements.txt
@@ -1,8 +1,8 @@
-asgiref
-django
-gunicorn
-psycopg2
-python-dotenv
-sqlparse
-typing_extensions
-django-guardian
+asgiref==3.8.1
+Django==5.1.7
+gunicorn==23.0.0
+psycopg2==2.9.10
+python-dotenv==1.0.1
+sqlparse==0.5.1
+typing_extensions==4.12.2
+django-guardian==2.4.0
