--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
 DEBUG=False
 SECRET_KEY=1
-PUBLIC_URL=http://127.0.0.1:8000
+ALLOWED_URLS=http://127.0.0.1:7000
 DATABASE_ENGINE=postgresql
 DATABASE_NAME=judo_profiles
 DATABASE_USER=admin
 DATABASE_PASSWORD=secret
-
-PUBLIC_URL="http://127.0.0.1:7000"
