--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,8 @@
-upstream judo_profiles {
-    server app:8000;
-}
-
 server {
     listen 80;
 
     location / {
-        proxy_pass http://judo_profiles;
+        proxy_pass http://app:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
