--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,11 @@ services:
       - DATABASE_PORT=5432
     volumes:
       - static:/app/staticfiles
+      - nginx:/app/nginx_conf
   proxy:
     image: nginx:1.27.4
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - nginx:/etc/nginx/conf.d
       - static:/app/staticfiles
     ports:
       - 8000:80
@@ -38,3 +39,4 @@ services:
 volumes:
   db-data: {}
   static: {}
+  nginx: {}
