--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
         proxy_redirect off;
     }
 
-    location /static/ {
-        alias /app/staticfiles/;
+    location /static {
+        alias /app/staticfiles;
     }
 }
