--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
 
     location / {
-        proxy_pass http://app:8000;
+        proxy_pass http://${APP_HOST}:${APP_PORT};
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
