--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -3,8 +3,8 @@ server {
 
     location / {
         proxy_pass http://${APP_HOST}:${APP_PORT};
-        proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
-        proxy_set_header Host ${DOLLAR}host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
         proxy_redirect off;
     }
 
