--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 asgiref==3.8.1
-Django==5.1.8
-gunicorn==23.0.0
-psycopg2==2.9.10
-python-dotenv==1.0.1
-sqlparse==0.5.1
-typing_extensions==4.13.2
+django==5.1.8
 django-guardian==2.4.0
+psycopg2==2.9.10
+uwsgi==2.0.28
