--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-asgiref==3.8.1
-django==5.1.8
+django==5.2.0
 django-guardian==2.4.0
-psycopg2==2.9.10
-uwsgi==2.0.28
+psycopg==3.2.7 
+uwsgi==2.0.29
