optimize key generation ui

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,6 +3,8 @@ module = judo_profiles.wsgi:application
 env = DJANGO_SETTINGS_MODULE=judo_profiles.settings
 static-map = /static=staticfiles
 static-map = /robots.txt=staticfiles/robots.txt
+processes = 2
+threads = 2
 static-map = /favicon.svg=staticfiles/favicon.svg
 vacuum = True
 uid = www-data
