--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,7 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                   context: .
+                  file: ./Dockerfile
                   file: ./docker/default.Dockerfile
                   platforms: linux/amd64,linux/arm64,linux/arm/v7
                   tags: |
