--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build docker image on release
+name: Build and push docker image
 
 on: workflow_dispatch
 
@@ -15,6 +15,12 @@ jobs:
               run: |
                   echo "version=$(cat version.txt)" >> $GITHUB_ENV
                   echo "commit=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
             - name: Log in to ghcr
               uses: docker/login-action@v3
